--- a/myNextProject/composer.json
+++ b/myNextProject/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^3.3",
+        "spatie/laravel-permission": "^2.9",
         "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
